--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,11 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# local dev
+*.bak
+bak
+.DS_Store
+
+# storybook
+storybook-static
