:rocket: add release workflow; release npm script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook --coverage",
-    "dist": "node lib/esbuild.config.js"
+    "predist": "npm run cem && npm run build-storybook",
+    "dist": "node lib/esbuild.config.js",
+    "prerelease": "npm run dist",
+    "release": "semantic-release --debug=true"
   },
   "type": "module",
   "version": "0.0.0",
