--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -20,6 +20,6 @@ jobs:
         run: npm run build-storybook
       - name: Serve Storybook and run tests
         run: |
-          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-          "npx http-server ./storybook-static --port 2001 --silent" \
+          npx --yes concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+          "npx --yes http-server ./storybook-static --port 2001 --silent" \
           "npx wait-on http://127.0.0.1:2001 && npx test-storybook  --url http://127.0.0.1:2001 --coverage"
