--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "profile-components",
+  "author": "scottnath",
   "scripts": {
     "cem": "custom-elements-manifest analyze --config 'lib/custom-elements-manifest.config.js'",
     "storybook": "storybook dev -p 6006",
@@ -15,8 +16,17 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/scottnath/profile-components.git"
+  }, 
+  "publishConfig": {
+    "provenance": true
   },
-  "author": "scottnath",
+  "files": [
+    "dist",
+    "lib",
+    "custom-elements.json",
+    "README.md",
+    "LICENSE"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.8.4",
