--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@custom-elements-manifest/analyzer": "^0.8.4",
     "@custom-elements-manifest/to-markdown": "^0.1.0",
     "@primer/css": "^21.0.8",
+    "@primer/octicons": "^19.7.0",
     "@primer/primitives": "^7.12.0",
     "commander": "^11.0.0",
     "esbuild": "^0.19.2",
