--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "profile-components",
   "author": "scottnath",
+  "description": "A collection of web components for displaying profile information from various websites.",
+  "homepage": "https://scottnath.github.io/profile-components",
   "scripts": {
     "cem": "custom-elements-manifest analyze --config 'lib/custom-elements-manifest.config.js'",
     "storybook": "storybook dev -p 6006",
@@ -9,31 +11,40 @@
     "predist": "npm run cem && npm run build-storybook",
     "dist": "node lib/esbuild.config.js",
     "prerelease": "npm run dist",
-    "release": "semantic-release --debug=true"
+    "release": "semantic-release --debug=true",
+    "generate:primer": "node lib/cli.js generate-vars-primer"
   },
   "type": "module",
   "version": "0.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/scottnath/profile-components.git"
-  }, 
+  },
   "publishConfig": {
     "provenance": true
   },
   "files": [
     "dist",
     "lib",
+    "src",
     "custom-elements.json",
     "README.md",
     "LICENSE"
   ],
+  "exports": {
+    "github": {
+      "github-user.js": "./dist/github-user.js",
+      "github-repository.js": "./dist/github-repository.js",
+      "utils": "./src/github/utils/github.js"
+    }
+  },
   "license": "MIT",
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.8.4",
     "@custom-elements-manifest/to-markdown": "^0.1.0",
-    "@primer/css": "^21.0.8",
+    "@primer/css": "^21.0.9",
     "@primer/octicons": "^19.7.0",
-    "@primer/primitives": "^7.12.0",
+    "@primer/primitives": "^7.13.0",
     "commander": "^11.0.0",
     "esbuild": "^0.19.2",
     "esbuild-plugin-inline-import": "^1.0.1",
