--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/scottnath/profile-components.git"
-  }, 
+  },
   "publishConfig": {
     "provenance": true
   },
@@ -37,7 +37,10 @@
     "./*.js": {
       "import": "./dist/*.js"
     },
-    "./utils/github/*.js" : {
+    "./github/*.js": {
+      "import": "./src/github/*.js"
+    },
+    "./github/utils/*.js": {
       "import": "./src/github/utils/*.js"
     }
   },
@@ -45,15 +48,16 @@
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.8.4",
     "@custom-elements-manifest/to-markdown": "^0.1.0",
-    "@primer/css": "^21.0.9",
-    "@primer/octicons": "^19.7.0",
+    "@primer/octicons": "^19.8.0",
     "@primer/primitives": "^7.13.0",
     "commander": "^11.0.0",
-    "esbuild": "^0.19.2",
+    "documentation": "^14.0.2",
+    "esbuild": "^0.19.3",
     "esbuild-plugin-inline-import": "^1.0.1",
     "fs-extra": "^11.1.1",
     "storydocker-storybook": "^0.0.16",
-    "storydocker-utilities": "^0.0.11"
+    "storydocker-utilities": "^0.0.11",
+    "yaml": "^2.3.2"
   },
   "customElements": "custom-elements.json"
 }
