:white_check_mark: merge-blocking unit tests

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook --coverage",
+    "predist": "npm run cem && npm run build-storybook",
     "dist": "node lib/esbuild.config.js",
     "prerelease": "npm run dist",
     "release": "semantic-release --debug=true",
+    "test:unit": "node --test --experimental-test-coverage",
     "generate:primer": "node lib/cli.js generate-vars-primer",
     "generate:fixtures": "node lib/cli.js generate-fixtures-github",
     "generate:docs": "node lib/cli.js generate-docs",
