--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "storybook-addon-fetch-mock": "^1.0.1",
     "storydocker-storybook": "^0.0.22",
     "storydocker-utilities": "^0.0.16",
+    "vite-plugin-turbosnap": "^1.0.3",
     "yaml": "^2.4.0"
   },
   "customElements": "custom-elements.json"
