--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "preview-storybook": "storybook dev",
-    "test-storybook": "test-storybook --coverage",
+    "test-storybook": "test-storybook --coverage --url http://localhost:6006",
     "predist": "npm run cem && npm run build-storybook",
     "dist": "node lib/esbuild.config.js",
     "prerelease": "npm run dist",
