--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "preview-storybook": "storybook dev",
-    "test-storybook": "test-storybook --coverage",
+    "test-storybook": "test-storybook --coverage --url http://localhost:6006",
     "predist": "npm run cem && npm run build-storybook",
     "dist": "node lib/esbuild.config.js",
     "prerelease": "npm run dist",
@@ -45,18 +45,21 @@
   "license": "MIT",
   "devDependencies": {
     "@chromaui/addon-visual-tests": "^1.0.0",
-    "@custom-elements-manifest/analyzer": "^0.9.0",
+    "@custom-elements-manifest/analyzer": "^0.9.3",
     "@custom-elements-manifest/to-markdown": "^0.1.0",
+    "@guidepup/virtual-screen-reader": "^0.21.0",
     "@primer/octicons": "^19.8.0",
-    "@primer/primitives": "^7.15.6",
+    "@primer/primitives": "^7.15.9",
     "commander": "^12.0.0",
-    "esbuild": "^0.20.0",
+    "esbuild": "^0.20.1",
     "esbuild-plugin-inline-import": "^1.0.4",
     "fs-extra": "^11.2.0",
     "jsdoc-to-markdown": "^8.0.1",
+    "storybook-addon-fetch-mock": "^1.0.1",
     "storydocker-storybook": "^0.0.22",
     "storydocker-utilities": "^0.0.16",
-    "yaml": "^2.3.4"
+    "vite-plugin-turbosnap": "^1.0.3",
+    "yaml": "^2.4.0"
   },
   "customElements": "custom-elements.json"
 }
